--- a/src/main/webapp/resources/css/dashboard.css
+++ b/src/main/webapp/resources/css/dashboard.css
@@ -35,6 +35,14 @@ td {
   margin-left: 12px;
   margin-right: 10px
 }
+#login_information {
+  float: left;
+  margin: 13px 20px 0 0;
+  color: #ffffff;
+}
+#logoutForm {
+  float: right;
+}
 
 /*
  * Sidebar
