--- a/src/main/webapp/resources/css/bootstrapEdited.css
+++ b/src/main/webapp/resources/css/bootstrapEdited.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Lato:400,700,400italic");
+
 /*!
  * bootswatch v3.3.6
  * Homepage: http://bootswatch.com
@@ -19,6 +20,8 @@ html {
 }
 body {
   margin: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;    
 }
 article,
 aside,
