--- a/src/main/webapp/WEB-INF/resources/css/dashboard.css
+++ b/src/main/webapp/WEB-INF/resources/css/dashboard.css
@@ -360,7 +360,7 @@ th {
 }
 
 a.settings_link, a.settings_link:focus, a.settings_link:hover {
-  color: #2C3E50 !important;
+  color: #2C3E50;
 }
 
 input.settings_modal {
