add show button for all laundry rooms and format jsp's

--- a/src/main/webapp/WEB-INF/views/error.html
+++ b/src/main/webapp/WEB-INF/views/error.html
@@ -3,7 +3,7 @@
 <head>
   <title>Parkhaven - Was Schema</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <link href='http://fonts.googleapis.com/css?family=Courgette' rel='stylesheet' type='text/css'>
+  <link href="http://fonts.googleapis.com/css?family=Courgette" rel="stylesheet" type="text/css">
   <style type="text/css">
     body {
       font-family: 'Courgette', cursive;
@@ -67,7 +67,6 @@
   </style>
 </head>
 
-
 <body>
 <div class="wrap">
   <div class="logo">
@@ -76,5 +75,4 @@
   </div>
 </div>
 </body>
-
 </html>
