--- a/src/app/feature/dashboard/laundry-schema/table/table.component.css
+++ b/src/app/feature/dashboard/laundry-schema/table/table.component.css
@@ -19,6 +19,10 @@ table td, table th {
   font-family: Roboto, sans-serif;
 }
 
+tbody {
+  position: relative;
+}
+
 td {
   min-width: 148px;
 }
@@ -52,7 +56,7 @@ tr:last-child > td.time {
 
 td.time, th.time {
   min-width: 60px;
-  z-index: 10;
+  z-index: 1;
   position: absolute;
 }
 
