--- a/src/app/features/auth/registration/registration.component.html
+++ b/src/app/features/auth/registration/registration.component.html
@@ -4,7 +4,7 @@
       <a routerLink="/login">
         <img id="logo"
              mat-card-image
-             src="../../../assets/parkhaven-logo.png"
+             src="../../../../assets/parkhaven-logo.png"
              alt="Logo">
       </a>
     </mat-card-header>
