add firestore rules

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -48,4 +48,6 @@
     </form>
     <button routerLink="/">Home</button>
   </mat-card>
+
+  <button (click)="demoTestUsersCollectionSecurityRules()">Click</button>
 </main>
