--- a/src/app/features/schema/room/room.component.html
+++ b/src/app/features/schema/room/room.component.html
@@ -1,11 +1,15 @@
 <main>
-  <mat-chip-list *ngIf="machineMetaData.length === 2">
-    <mat-chip disabled class="left_taken">{{machineMetaData[0].type}} {{machineMetaData[0].name}}</mat-chip>
-    <mat-chip disabled class="right_taken">{{machineMetaData[1].type}} {{machineMetaData[1].name}}</mat-chip>
+  <mat-chip-list>
+    <mat-chip disabled class="left_taken">
+      {{currentRoomMachinesInfo[0].type}} {{currentRoomMachinesInfo[0].id}}
+    </mat-chip>
+    <mat-chip disabled class="right_taken">
+      {{currentRoomMachinesInfo[1].type}} {{currentRoomMachinesInfo[1].id}}
+    </mat-chip>
   </mat-chip-list>
 
   <div class="schema">
-    <table class="primary" *ngIf="machines">
+    <table class="primary">
       <tr>
         <td>
           <table>
@@ -15,26 +19,24 @@
         </td>
         <td *ngFor="let day of days; let dayIndex = index">
           <table>
-            <thead><tr><td>{{day | date: 'EEEE'}}</td></tr></thead>
+            <thead><tr><td>{{day.id | date: 'EEEE'}}</td></tr></thead>
             <tbody>
               <tr *ngFor="let time of times; let timeIndex = index"><td>
                 <app-appointment-button
                   [isPositionedLeft]="true"
                   [appointment]="{
-                      room: room,
-                      machineMetaData: machineMetaData[0],
-                      day: {index: dayIndex, value: day},
+                      machineInfo: currentRoomMachinesInfo[0],
+                      day: {index: dayIndex, value: day.id},
                       time: {index: timeIndex, value: time},
-                      houseNumber: machines['A1'][day][timeIndex]}">
+                      houseNumber: machines[currentRoomMachinesInfo[0].id][day.id][timeIndex]}">
                 </app-appointment-button>
                 <app-appointment-button
                   [isPositionedLeft]="false"
                   [appointment]="{
-                      room: room,
-                      machineMetaData: machineMetaData[1],
-                      day: {index: dayIndex, value: day},
+                      machineInfo: currentRoomMachinesInfo[1],
+                      day: {index: dayIndex, value: day.id},
                       time: {index: timeIndex, value: time},
-                      houseNumber: machines['A2'][day][timeIndex]}">
+                      houseNumber: machines[currentRoomMachinesInfo[1].id][day.id][timeIndex]}">
                 </app-appointment-button>
               </td></tr>
             </tbody>
