make frontend responsive

--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -6,7 +6,7 @@ main {
   justify-content: center;
   align-items: center;
 
-  /* only for login, registration and forgotPassword */
+  /* only for login, registration, forgotPassword and pageNotFound*/
   background: #2c3e50;
 }
 
