--- a/src/app/features/schema/schema.component.html
+++ b/src/app/features/schema/schema.component.html
@@ -1,9 +1,14 @@
-<h1>Week 11 - Sunday 18 March 2018</h1>
+<div>
+  <h1>Week 11 - Sunday 18 March 2018</h1>
+  <button class="mat-button" (click)="getCounters()">Counters</button>
+</div>
 
 <nav mat-tab-nav-bar class="demo-tab-group">
   <a mat-tab-link
      *ngFor="let room of rooms"
-     [routerLink]="['/room', room.id]">
+     [routerLink]="['/room', room.id]"
+     routerLinkActive #rla="routerLinkActive"
+     [active]="rla.isActive">
     {{room.name}}
   </a>
 </nav>
