--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,3 +1,9 @@
-<h4>
-  404! The page was not found!
-</h4>
+<main>
+  <div class="container">
+    <div class="_404">404</div>
+    <br>
+    <div class="_1">THE PAGE</div>
+    <div class="_2">WAS NOT FOUND</div>
+    <a class="btn" href="#">BACK TO EARTH</a>
+  </div>
+</main>
