--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
            src="./../../assets/parkhaven-logo.png"/>
       <a fxHide.lt-md routerLink="/"><span>Wasschema</span></a>
       <span fxHide.lt-sm class="fill-remaining-space"></span>
-      <span fxHide.lt-sm id="logged_in_as_text">Logged in as: {{loggedInUser.displayName}}</span>
+      <span fxHide.lt-sm id="logged_in_as_text">Logged in as: {{loggedInUser.email}}</span>
       <button fxHide.lt-sm mat-button (click)="logout()">Logout</button>
     </mat-toolbar>
   </header>
