--- a/src/app/features/schema/room/room.component.css
+++ b/src/app/features/schema/room/room.component.css
@@ -1,84 +1,67 @@
 div.schema {
+}
+
+div.schema > div.laundry_table {
+  margin-bottom: 12px;
+
+  display: flex;
+
   overflow-x: scroll;
   overflow-y: hidden;
 }
 
-div.schema > table {
-  margin-bottom: 12px;
-}
-
-table {
-  border-spacing: 0;
-}
-
-tr:nth-child(odd) {
+div.time_cell:nth-child(even), div.appointment_cell:nth-child(even) {
   background-color: rgba(0, 0, 0, 0.03);
 }
-tr:nth-child(odd) > td.appointment_cell {
+
+div.appointment_cell, div.time_cell {
   border-top: 1px solid #efefef;
 }
 
-/* unset border and background-color for the time and day headers */
-thead> tr:nth-child(1) {
-  background-color: #fafafa;
-}
-thead > tr:nth-child(1) > td {
-  border-top: unset;
-}
-
 /* each time column */
-td.time_column {
+div.time_column {
   min-width: 70px;
   padding: 0;
 }
 
-thead td.time_cell {
-  padding: 6px 15px;
+div.time_column_header {
+  padding: 6px 25px;
   height: 19px; /* same height as the day cells */
 }
 
-td.time_cell {
-  padding: 6px 15px;
+div.time_cell {
+  padding: 6px 25px;
   height: 25px /* same height as appointment cell*/
 }
 
-td.time_column > table {
-  min-height: 506px; /* same height as the day columns */
-}
-
 /* each day header */
-td.day_column_header {
+div.day_column_header {
   padding: 6px 12px;
 }
 
 /* each day column */
-td.day_column {
+div.day_column {
   min-width: 172px; /* (74px per appointment slot x 2) + (12px padding x 2) */
   padding: 0;
-}
 
-td.day_column:first-of-type > table {
-  margin-left: 95px;
-  width: max-content;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1; /* grows with the available space */
+
+  z-index: -1; /* to work well with the box-shadow */
 }
 
 /* each day cell */
-td.appointment_cell {
+div.appointment_cell {
   padding: 6px 12px;
 }
 
 /* floating time column */
-td.time_column {
+div.time_column {
   box-shadow: 4px 4px 8px 0 rgba(0, 0, 0, .2), 0 0 0 0 rgba(0, 0, 0, .14), 0 0 0 0 rgba(0, 0, 0, .12);
   background-color: #fafafa;
   z-index: 1;
-  position: absolute;
-}
-
-/* move first column away from floating time column */
-td.day_column:nth-child(2) > table {
-  margin-left: 72px;
-  width: max-content;
+  float: left;
 }
 
 /* needed for focus line when clicking on mat-chip*/
