--- a/src/app/features/schema/schema.component.html
+++ b/src/app/features/schema/schema.component.html
@@ -1,6 +1,6 @@
-<div>
-  <h1>Week 11 - Sunday 18 March 2018</h1>
-  <button class="mat-button" (click)="getCounters()">Counters</button>
+<div class="week_and_counter_bar">
+  <h1>Week 11 - 18 March 2018</h1>
+  <button mat-button (click)="getCounters()">Remaining Appointments</button>
 </div>
 
 <nav mat-tab-nav-bar class="demo-tab-group">
