--- a/src/app/features/schema/room/room.component.html
+++ b/src/app/features/schema/room/room.component.html
@@ -1,48 +1,45 @@
 <main>
   <mat-chip-list>
     <mat-chip disabled class="left_taken">
-      {{currentRoomMachinesInfo[0].type}} {{currentRoomMachinesInfo[0].id}}
+      {{readableType(currentRoomMachinesInfo[0].type)}} {{currentRoomMachinesInfo[0].id}}
     </mat-chip>
     <mat-chip disabled class="right_taken">
-      {{currentRoomMachinesInfo[1].type}} {{currentRoomMachinesInfo[1].id}}
+      {{readableType(currentRoomMachinesInfo[1].type)}} {{currentRoomMachinesInfo[1].id}}
     </mat-chip>
   </mat-chip-list>
 
   <div class="schema">
-    <table class="primary">
-      <tr>
-        <td class="time_column">
-          <table>
-            <thead><tr><td class="time_cell">Time</td></tr></thead>
-            <tbody><tr *ngFor="let time of times"><td class="time_cell">{{time}}</td></tr></tbody>
-          </table>
-        </td>
-        <td class="day_column" *ngFor="let day of days; let dayIndex = index">
-          <table>
-            <thead><tr><td class="day_column_header">{{day.id | date: 'EEEE'}}</td></tr></thead>
-            <tbody>
-              <tr *ngFor="let time of times; let timeIndex = index"><td class="appointment_cell">
-                <app-appointment-button
-                  [isPositionedLeft]="true"
-                  [appointment]="{
+    <!-- I do this so that I don't have to put position absolute -->
+    <div class="time_column">
+      <div class="head">
+        <div class="time_column_header">Time</div>
+      </div>
+      <div *ngFor="let time of times" class="time_cell">{{time}}</div>
+    </div>
+    <div class="laundry_table">
+      <div class="day_column" *ngFor="let day of days; let dayIndex = index">
+        <div class="head">
+          <div class="day_column_header">{{day.id | date: 'EEEE'}}</div>
+        </div>
+        <div *ngFor="let time of times; let timeIndex = index" class="appointment_cell">
+          <app-appointment-button
+            [isPositionedLeft]="true"
+            [appointment]="{
                       machineInfo: currentRoomMachinesInfo[0],
                       day: {index: dayIndex, value: day.id},
                       time: {index: timeIndex, value: time},
                       houseNumber: machines[currentRoomMachinesInfo[0].id][day.id][timeIndex]}">
-                </app-appointment-button>
-                <app-appointment-button
-                  [isPositionedLeft]="false"
-                  [appointment]="{
+          </app-appointment-button>
+          <app-appointment-button
+            [isPositionedLeft]="false"
+            [appointment]="{
                       machineInfo: currentRoomMachinesInfo[1],
                       day: {index: dayIndex, value: day.id},
                       time: {index: timeIndex, value: time},
                       houseNumber: machines[currentRoomMachinesInfo[1].id][day.id][timeIndex]}">
-                </app-appointment-button>
-              </td></tr>
-            </tbody>
-          </table>
-        </td>
-      </tr>
-    </table>
+          </app-appointment-button>
+        </div>
+      </div>
+    </div>
   </div>
 </main>
