--- a/src/app/features/settings/settings.component.html
+++ b/src/app/features/settings/settings.component.html
@@ -3,3 +3,11 @@
 <app-set-favourite-laundry-room></app-set-favourite-laundry-room>
 
 <app-delete-account></app-delete-account>
+
+<button (click)="requestPermission()">
+  Hey this is a chat app, you should let us send you notifications for these reasons!
+</button>
+
+<button (click)="listen()">
+  listen
+</button>
