--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
 <router-outlet></router-outlet>
+
+<button (click)="requestPermission()">
+  Hey this is a chat app, you should let us send you notifications for these reasons!
+</button>
+
+<button (click)="listen()">
+  listen
+</button>
