--- a/src/app/features/settings/settings.component.html
+++ b/src/app/features/settings/settings.component.html
@@ -2,12 +2,6 @@
 
 <app-set-favourite-laundry-room></app-set-favourite-laundry-room>
 
+<app-push-notifications></app-push-notifications>
+
 <app-delete-account></app-delete-account>
-
-<button (click)="requestPermission()">
-  Hey this is a chat app, you should let us send you notifications for these reasons!
-</button>
-
-<button (click)="listen()">
-  listen
-</button>
