--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -15,22 +15,27 @@
         <mat-form-field>
           <input matInput
                  placeholder="Email"
-                 name="email"
-                 type="email"
-                 formControlName="email"/>
+                 formControlName="email"
+                 type="email"/>
+          <mat-error *ngIf="email.errors?.required">
+            Email required.
+          </mat-error>
+          <mat-error *ngIf="email.errors?.email">
+            Incorrect email.
+          </mat-error>
         </mat-form-field>
       </mat-card-content>
 
       <div id="action">
         <button mat-raised-button
                 color="primary"
-                type="submit">Send email
+                type="submit">Send Email
         </button>
       </div>
 
       <div id="card_footer">
         <a class="action_link"
-           routerLink="/login">Login</a>
+           routerLink="/login">Log In</a>
       </div>
     </form>
   </mat-card>
