--- a/src/app/features/settings/change-password/change-password.component.html
+++ b/src/app/features/settings/change-password/change-password.component.html
@@ -8,9 +8,25 @@
       <mat-form-field>
         <input matInput
                placeholder="New password"
-               name="newPassword"
                type="password"
                formControlName="newPassword"/>
+        <mat-error *ngIf="newPassword.errors?.required">
+          Password required.
+        </mat-error>
+        <mat-error *ngIf="newPassword.errors?.minlength">
+          Password needs to be at least 6 characters.
+        </mat-error>
+      </mat-form-field>
+
+      <mat-form-field>
+        <input matInput
+               placeholder="Confirm Password"
+               formControlName="confirmPassword"
+               type="password"
+               [errorStateMatcher]="errorStateMatcher">
+        <mat-error *ngIf="changePasswordForm.hasError('identical') && confirmPassword.touched">
+          Passwords need to match.
+        </mat-error>
       </mat-form-field>
     </div>
     <div class="action">
