--- a/src/app/features/settings/set-favourite-laundry-room/set-favourite-laundry-room.component.html
+++ b/src/app/features/settings/set-favourite-laundry-room/set-favourite-laundry-room.component.html
@@ -7,15 +7,18 @@
     <div class="messages">
       <mat-radio-group name="favouriteLaundryRoom"
                        formControlName="favouriteLaundryRoom">
-        <mat-radio-button [value]="'A'"
+        <mat-radio-button color="accent"
+                          [value]="'A'"
                           [checked]="favouriteLaundryRoom === 'A'">
           Room A
         </mat-radio-button>
-        <mat-radio-button [value]="'B'"
+        <mat-radio-button color="accent"
+                          [value]="'B'"
                           [checked]="favouriteLaundryRoom === 'B'">
           Room B
         </mat-radio-button>
-        <mat-radio-button [value]="'C'"
+        <mat-radio-button color="accent"
+                          [value]="'C'"
                           [checked]="favouriteLaundryRoom === 'C'">
           Room C
         </mat-radio-button>
