--- a/src/app/auth/registration/registration.component.html
+++ b/src/app/auth/registration/registration.component.html
@@ -1,5 +1,5 @@
 <main>
-  <mat-card class="form-container">
+  <mat-card class="mat-elevation-z8">
     <mat-card-header>
       <a routerLink="/login">
         <img id="logo"
@@ -13,67 +13,64 @@
           (ngSubmit)="onFormSubmit();">
       <mat-card-content>
         <mat-form-field>
-          <input matInput placeholder="First Name"
-                 formControlName="firstName">
-          <!--<mat-error-->
-          <!--*ngIf="registrationForm.controls.firstName.errors?.required">-->
-          <!--Please enter your first name.-->
-          <!--</mat-error>-->
-        </mat-form-field>
-        <mat-form-field>
-          <input matInput
-                 placeholder="Last Name"
-                 formControlName="lastName">
-          <!--<mat-error-->
-          <!--*ngIf="registrationForm.controls.lastName.errors?.required">-->
-          <!--Please enter your last name.-->
-          <!--</mat-error>-->
-        </mat-form-field>
-        <mat-form-field>
           <input matInput
                  placeholder="Email"
                  formControlName="email"
-                 type="email">
-          <!--<mat-error-->
-          <!--*ngIf="registrationForm.controls.email.errors?.email">-->
-          <!--Please enter your email.-->
-          <!--</mat-error>-->
+                 type="email"/>
+          <mat-error *ngIf="email.errors?.required">
+            Email required.
+          </mat-error>
+          <mat-error *ngIf="email.errors?.email">
+            Incorrect email.
+          </mat-error>
         </mat-form-field>
-        <mat-form-field>
-          <input matInput
-                 placeholder="Password"
-                 formControlName="password"
-                 type="password">
-          <!--<mat-error-->
-          <!--*ngIf="registrationForm.controls.password.errors?.required">-->
-          <!--Please enter a valid password.-->
-          <!--</mat-error>-->
-          <!--<mat-error-->
-          <!--*ngIf="registrationForm.controls.password.errors?.minlength">-->
-          <!--Please enter at least 6 characters.-->
-          <!--</mat-error>-->
-        </mat-form-field>
+
+        <div formGroupName="passwords">
+          <mat-form-field>
+            <input matInput
+                   placeholder="Password"
+                   formControlName="password"
+                   type="password"/>
+            <mat-error *ngIf="password.errors?.required">
+              Password required.
+            </mat-error>
+            <mat-error *ngIf="password.errors?.minlength">
+              Password needs to be at least 6 characters.
+            </mat-error>
+          </mat-form-field>
+
+          <mat-form-field>
+            <input matInput
+                   placeholder="Confirm Password"
+                   formControlName="confirmPassword"
+                   type="password"
+                  [errorStateMatcher]="errorStateMatcher"/>
+            <mat-error *ngIf="registrationForm.get('passwords').hasError('identical') && confirmPassword.touched">
+              Passwords need to match.
+            </mat-error>
+          </mat-form-field>
+        </div>
+
         <mat-form-field>
           <input matInput
                  placeholder="House number"
-                 formControlName="houseNumber">
-          <!--<mat-error-->
-          <!--*ngIf="registrationForm.controls.houseNumber.errors?.required">-->
-          <!--Please enter your house number.-->
-          <!--</mat-error>-->
+                 formControlName="houseNumber"/>
+          <mat-error *ngIf="houseNumber.errors?.required">
+            House number required.
+          </mat-error>
         </mat-form-field>
       </mat-card-content>
 
       <div id="action">
         <button mat-raised-button
                 color="primary"
-                type="submit">Signup
+                type="submit">Sign Up
         </button>
       </div>
 
       <div id="card_footer">
         <a class="action_link"
-           routerLink="/login">Login</a>
+           routerLink="/login">Log In</a>
       </div>
     </form>
   </mat-card>
