--- a/src/app/features/settings/delete-account/delete-account.component.html
+++ b/src/app/features/settings/delete-account/delete-account.component.html
@@ -2,23 +2,14 @@
   <div class="title">
     <h2>Delete account</h2>
   </div>
-  <form [formGroup]="deleteAccountForm"
-        (ngSubmit)="deleteAccount()">
-    <div class="messages">
-      <mat-form-field>
-        <input matInput
-               placeholder="Current password"
-               type="password"
-               name="currentPassword"
-               formControlName="currentPassword"/>
 
-      </mat-form-field>
-    </div>
-    <div class="action">
-      <button mat-raised-button
-              color="primary"
-              type="submit">Update
-      </button>
-    </div>
-  </form>
+  <div class="messages">
+  </div>
+  <div class="action">
+    <button mat-raised-button
+            color="primary"
+            (click)="deleteAccount()">
+      Delete Account
+    </button>
+  </div>
 </div>
