--- a/src/app/features/settings/push-notifications/push-notifications.component.css
+++ b/src/app/features/settings/push-notifications/push-notifications.component.css
@@ -4,3 +4,12 @@
   max-width: 400px;
   margin: 0 15px 25px;
 }
+
+.messages {
+  height: 60px;
+  padding-top: 30px;
+}
+
+.enable_wrap {
+  white-space: normal;
+}
