--- a/src/app/features/settings/push-notifications/push-notifications.component.html
+++ b/src/app/features/settings/push-notifications/push-notifications.component.html
@@ -1,10 +1,10 @@
 <div class="settings_card mat-elevation-z4">
   <div class="title">
-    <h2>Enable Notifications</h2>
+    <h2>Enable notifications</h2>
   </div>
   <div class="messages">
-    <mat-checkbox (change)="changeOccured($event)">
-      Show push notifications 30 minutes before appointment
-    </mat-checkbox>
+    <mat-slide-toggle color="primary" (change)="changeOccured($event)">
+      <span class="enable_wrap">Receive notifications 30 minutes before appointments</span>
+    </mat-slide-toggle>
   </div>
 </div>
